--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pr6</title>
+    <script src="main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Pr6</h1>
+    <div id="e1">
+      <h2>1.</h2>
+      <button onclick="mostrarUser()">Ver Usuario</button>
+      <div id="seeUser"></div>
+    </div>
+    <div id="e2">
+      <h2>2.</h2>
+      <button onclick="mostrarUsers()">Ver Usuarios</button>
+      <div id="seeUsers"></div>
+    </div>
+  </body>
 </html>
