--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Pr6</title>
-    <script src="main.js"></script>
-  </head>
-  <body>
-    <h1>Pr6</h1>
-    <div id="e1">
-      <h2>1.</h2>
-      <button onclick="mostrarUser()">Ver Usuario</button>
-      <div id="seeUser"></div>
-    </div>
-    <div id="e2">
-      <h2>2.</h2>
-      <button onclick="mostrarUsers()">Ver Usuarios</button>
-      <div id="seeUsers"></div>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Pr6</title>
+  <script src="main.js"></script>
+</head>
+
+<body>
+  <h1>Pr6</h1>
+  <div id="e1">
+    <h2>1.</h2>
+    <button onclick="mostrarUser()">Ver Usuario</button>
+    <div id="seeUser"></div>
+  </div>
+  <div id="e2">
+    <h2>2.</h2>
+    <button onclick="mostrarUsers()">Ver Usuarios</button>
+    <div id="seeUsers"></div>
+  </div>
+
+  <div id="e3">
+    <h2>3.</h2>
+    <button onclick="mostrarUserSession()">Ver Usuario Session</button>
+    <div id="seeSession"></div>
+  </div>
+
+  <div id="e4">
+    <h2>4.</h2>
+    <div id="seeDB"></div>
+  </div>
+
+  <div id="penjat">
+    <h2>Penjat.</h2>
+    <form action="">
+      <input type="text" name="name" id="name">
+      <input type="button" value="Enviar" onclick="sendText()">
+    </form>
+  </div>
+</body>
+
 </html>
