--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 
   <div id="penjat">
     <h2>Penjat.</h2>
-    <form action="">
-      <input type="text" name="name" id="name">
-      <input type="button" value="Enviar" onclick="sendText()">
-    </form>
+    <button onclick="getParaula('')">generar Color</button>
+    
+    <button onclick="getParaula('saved=true')">generar Color</button>
+    <div id="palabra">
+
+    </div>
   </div>
 </body>
 
